# yt-tool

./: Cargo.toml  Makefile.toml  README.md
support/: Cargo.toml
support/src/: anyhow.rs  assert.rs  glob.rs  lib.rs
youtube/: Cargo.toml
youtube/src/: application.rs  domain.rs  infrastructure.rs  interface.rs  lib.rs
youtube/src/application/: chat_service.rs  comment.rs  ports.rs  use_cases.rs
youtube/src/application/ports/: new_line_provider.rs  output_presenter.rs
youtube/src/application/use_cases/: chat_convert.rs  watch_chat.rs
youtube/src/domain/: chat.rs  chat_entity.rs  chat_service.rs  live_chat.rs  repositories.rs  simple_chat.rs
youtube/src/domain/chat/: category.rs  posted_at.rs
youtube/src/domain/chat_service/: live_chat_action_panel_renderer.rs  live_chat_banner_renderer.rs  live_chat_membership_item_renderer.rs  live_chat_paid_message_renderer.rs  live_chat_renderer.rs  live_chat_sponsorships_gift_purchase_announcement_renderer.rs  live_chat_sponsorships_gift_redemption_announcement_renderer.rs  live_chat_text_message_renderer.rs  live_chat_ticker_paid_message_item_renderer.rs  live_chat_ticker_paid_sticker_item_renderer.rs  live_chat_viewer_engagement_message_renderer.rs  poll_renderer.rs
youtube/src/domain/live_chat/: actions.rs  commands.rs  item.rs  renderers.rs  repository.rs  values.rs
youtube/src/domain/live_chat/actions/: add_chat_item_action.rs  add_live_chat_ticker_item_action.rs  remove_chat_item_action.rs  (+5 more)
youtube/src/domain/simple_chat/: category.rs  content.rs  posted_at.rs  repository.rs
youtube/src/infrastructure/: file_watcher.rs  filesystem.rs  io.rs
youtube/src/infrastructure/filesystem/: chat_repository.rs
youtube/src/infrastructure/io/: chat_service_repository.rs  live_chat_json_repository.rs  simple_chat_csv_repository.rs
youtube/src/interface/: chat_file.rs  chat_file_service.rs  chat_in_memory_service.rs  cli.rs  formatted_json_interface.rs  formatted_json_service.rs  live_chat_json_interface.rs  live_chat_json_service.rs  presenter.rs
youtube/src/interface/cli/: formatted_json_command.rs  live_chat_json_command.rs  watch_chat_command.rs
youtube/src/interface/presenter/: stdout_presenter.rs
youtube/tests/: chat_file_service.rs  chat_in_memory_service.rs  formatted_json_service.rs  lib.rs  live_chat_json_service.rs  test_main.rs
youtube/tests/formatted_json_service/: file.rs  mod.rs  string.rs
youtube/tests/formatted_json_service/expected/: add_banner_to_live_chat_command.csv  formatted.csv  live_chat_action_panel_renderer.csv  live_chat_action_panel_renderer2.csv  live_chat_banner_redirect_renderer.csv  live_chat_banner_renderer.csv  live_chat_banner_renderer_with_collapsed_state.csv  live_chat_membership_item_renderer.csv  live_chat_membership_item_renderer2.csv  live_chat_membership_item_renderer3.csv  live_chat_membership_item_renderer4.csv  live_chat_membership_item_renderer5.csv  live_chat_membership_item_renderer6.csv  live_chat_paid_message_renderer.csv  live_chat_paid_message_renderer2.csv  live_chat_paid_message_renderer3.csv  live_chat_paid_message_renderer4.csv  live_chat_sponsorships_gift_purchase_announcement_renderer.csv  live_chat_sponsorships_gift_redemption_announcement_renderer.csv  live_chat_sponsorships_gift_redemption_announcement_renderer2.csv  live_chat_sponsorships_gift_redemption_announcement_renderer3.csv  live_chat_text_message_renderer.csv  live_chat_text_message_renderer2.csv  live_chat_text_message_renderer3.csv  live_chat_text_message_renderer4.csv  live_chat_text_message_renderer5.csv  live_chat_ticker_paid_message_item_renderer.csv  live_chat_ticker_paid_message_item_renderer2.csv  live_chat_ticker_paid_sticker_item_renderer.csv  live_chat_ticker_paid_sticker_item_renderer2.csv  live_chat_ticker_paid_sticker_item_renderer3.csv  live_chat_ticker_paid_sticker_item_renderer4.csv  live_chat_viewer_engagement_message_renderer.csv  replace_chat_item_action.csv  replay_chat_item_action.csv  update_live_chat_poll_action.csv  update_live_chat_poll_action2.csv
youtube/tests/formatted_json_service/json/: add_banner_to_live_chat_command.json  base.json  close_live_chat_action_panel_action.json  live_chat_action_panel_renderer.json  live_chat_action_panel_renderer2.json  live_chat_action_panel_renderer3.json  live_chat_banner_redirect_renderer.json  live_chat_banner_renderer.json  live_chat_banner_renderer_with_collapsed_state.json  live_chat_membership_item_renderer.json  live_chat_membership_item_renderer2.json  live_chat_membership_item_renderer3.json  live_chat_membership_item_renderer4.json  live_chat_membership_item_renderer5.json  live_chat_membership_item_renderer6.json  live_chat_paid_message_renderer.json  live_chat_paid_message_renderer2.json  live_chat_paid_message_renderer3.json  live_chat_paid_message_renderer4.json  live_chat_placeholder_item_renderer.json  live_chat_report_moderation_state_command.json  live_chat_sponsorships_gift_purchase_announcement_renderer.json  live_chat_sponsorships_gift_redemption_announcement_renderer.json  live_chat_sponsorships_gift_redemption_announcement_renderer2.json  live_chat_sponsorships_gift_redemption_announcement_renderer3.json  live_chat_text_message_renderer.json  live_chat_text_message_renderer2.json  live_chat_text_message_renderer3.json  live_chat_text_message_renderer4.json  live_chat_text_message_renderer5.json  live_chat_ticker_paid_message_item_renderer.json  live_chat_ticker_paid_message_item_renderer2.json  live_chat_ticker_paid_sticker_item_renderer.json  live_chat_ticker_paid_sticker_item_renderer2.json  live_chat_ticker_paid_sticker_item_renderer3.json  live_chat_ticker_paid_sticker_item_renderer4.json  live_chat_viewer_engagement_message_renderer.json  remove_banner_for_live_chat_command.json  remove_chat_item_action.json  remove_chat_item_by_author_action.json  (+3 more)
youtube/tests/live_chat_json_service/: file.rs  string.rs
youtube/tests/live_chat_json_service/expected/: live_chat.csv
youtube/tests/live_chat_watch_service/: file_watcher.rs  mod.rs
youtube/tests/live_chat_watch_service/json/: sample.live_chat.json
(+130 files in other folders)
