[package]
name = "yt-tool"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true

[workspace.package]
version = "0.3.6"
edition = "2024"
authors = ["Toshiki"]
license = "MIT"

[workspace]
members = ["youtube"]

[dependencies]
youtube = { path = "youtube" }

anyhow = { workspace = true } # https://zenn.dev/yukinarit/articles/b39cd42820f29e
clap = { workspace = true, features = ["derive"] }
clap_complete = { workspace = true }
env_logger = { workspace = true }
futures = { workspace = true }
glob = { workspace = true }
itertools = { workspace = true }
log = { workspace = true }
rust_support = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true }

[dev-dependencies]
assert_cmd = { workspace = true }
predicates = { workspace = true }
test-case = { workspace = true }

[workspace.dependencies]
anyhow = "1.0.97"
assert_cmd = "2.0"
chrono = "0.4.40"
clap = "4.5.31"
clap_complete = "4.5.46"
csv = "1.3.1"
env_logger = "0.11.6"
futures = "0.3"
glob = "0.3.2"
indexmap = "2.7.1"
indoc = "2.0.6"
itertools = "0.14.0"
log = "0.4.26"
predicates = "3.0"
pretty_assertions = "1.4.1"
rust_support = "0.1.2"
serde = "1.0.218"
serde_json = "1.0.140"
tempfile = "3.17.1"
test-case = "*"
thiserror = "2.0.12"
tokio = { version = "1.43.0", features = ["full"] }
url = "2.5.4"
