[package]
name = "support"
version.workspace = true
edition.workspace = true

[features]
default = ['anyhow', 'glob']
anyhow = []
glob = []

test = ['assert']
assert = []

[dependencies]
tokio = { workspace = true }
futures = { workspace = true }

glob = { workspace = true }
anyhow = { workspace = true }
thiserror = { workspace = true }

[dev-dependencies]
pretty_assertions = "1.4.1"
tempfile = "3.16.0"
