[package]
name = "support"
version.workspace = true
edition.workspace = true

[features]
default = ['anyhow', 'glob']
anyhow = []
glob = []

test = ['assert']
assert = ['pretty_assertions']

[dependencies]
tokio = { workspace = true }
futures = { workspace = true }

glob = { workspace = true }
anyhow = { workspace = true }
thiserror = { workspace = true }

chrono = { version = "0.4.39", features = ["serde"] }
pretty_assertions = { version = "1.4.1", optional = true }

[dev-dependencies]
pretty_assertions = "1.4.1"
tempfile = "3.16.0"
