[package]
name = "support"
version.workspace = true
edition.workspace = true

[features]
default = ['anyhow', 'glob']
anyhow = []
glob = []

test = ['assert']
assert = ['pretty_assertions']

[dependencies]
anyhow = { workspace = true }
futures = { workspace = true }
glob = { workspace = true }
pretty_assertions = { workspace = true, optional = true }
thiserror = { workspace = true }
tokio = { workspace = true }

[dev-dependencies]
pretty_assertions = { workspace = true }
tempfile = { workspace = true }
