[package]
name = "youtube"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true

[dependencies]
anyhow = { workspace = true }
chrono = { workspace = true, features = ["serde"] } # https://docs.rs/chrono/latest/chrono/serde/ts_seconds/fn.serialize.html
csv = { workspace = true }
env_logger = { workspace = true }
futures = { workspace = true }
indexmap = { workspace = true }
log = { workspace = true }
rust_support = { workspace = true }
serde = { workspace = true, features = ["derive"] } # https://serde.rs/container-attrs.html
serde_json = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true }
url = { workspace = true, features = ["serde"] }
itertools = { workspace = true }

[dev-dependencies]
indoc = { workspace = true }
pretty_assertions = { workspace = true }
rust_support = { workspace = true, features = ['test'] }
tempfile = { workspace = true }
test-case = { workspace = true }